<resources>
    <string name="app_name">ExemploDeLoginCadastroPerfil</string>


    <!--Toolbars-->
    <string name="Titulo1">Bem-Vindo</string>
    <string name="PerfilUsuario">Perfil</string>

    <!--Botões-->
    <string name="cadatrar">Cadastrar-se</string>
    <string name="Logar">Entrar</string>
    <string name="text_cadastrar">Crie uma conta aqui</string>
    <string name="btnDeslogar">Deslogar</string>
    <string name="Voltar">Voltar</string>
    <string name="pesquisa">pesquisar</string>


    <!--Testes-->
    <string name="Teste">Teste</string>
    <string name="title_activity_teste_menu">testeMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="todo">TODO</string>
    <string name="bem_vindo_de_volta">Bem Vindo de Volta</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="hello_word">hello word</string>
    <string name="splachscreen">SplachScreen</string>

</resources>